2021-06-07 Visenri
	* src/stm8/peeph.def:
	  Removed unused rules 660a & 660b because of patches applied in r12420 (SWAP implementation).
	* ChangeLog:
	  Fixed wrong date of previous commit.

2021-06-07 Visenri
	* src/stm8/peep.c,
	  Fixed typo regarding instruction 'jrsgt'.
	* src/stm8/peeph.def:
	  Added rules 600a & 600b from patch #362 that were failing because of the 'jrsgt' typo.

2021-06-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  src/stm8/gen.c:
	  Swap support, inspired by patch #363 by Visenri.

2021-06-03 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2349.c,
	  support/regression/tests/bug-2455.c,
	  support/regression/tests/compare.c,
	  support/regression/tests/fptr_cast_array_init.c,
	  support/regression/tests/genptrs.c,
	  support/regression/tests/z80n-push-nn.c:
	  Disable tests that fail due to known bug #3243.
	* src/stm8/peeph.def:
	  Rule packs 1, 3, 5, 6 from patch #362 by Visenri.
	* src/SDCCast.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  support/valdiag/tests/bug-2798.c:
	  Fix bug #2798.

2021-05-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Fix an issue in inconsistent application of patches in previous commits.

2021-05-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bitfields-nibbles.c:
	  Test from patch #373 by Visenri.
	* src/SDCCpeeph.c:
	  Peephole optimizer helper function refactoring, from patch #362 by Visenri.
	* src/stm8/peeph.def:
	  Peephole rule refactoring, from patch #361 by Basil Hussain.

2021-05-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3244.c:
	  Fix bug #3244.

2021-05-20 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/Makefile.in,
	  support/regression/ports/ucz180-resiy:
	  Test z180 port with --reserve-regs-iy.
	* sdcc/support/regression/ports/ucz80/spec.mk,
	  sdcc/support/regression/ports/ucr3ka/spec.mk: