@@ -6546,6 +6546,88 @@ release:
 }
 
 /*------------------------------------------------------------------*/
+/* genRoate - rotate                                                */
+/*------------------------------------------------------------------*/
+static void
+genRotate (const iCode *ic)
+{
+  operand *left, *result;
+
+  D (emit2 ("; genRoate", ""));
+
+  aopOp (left = IC_LEFT (ic), ic);
+  aopOp (result = IC_RESULT (ic), ic);
+  
+  const bool rlc = (ic->op == RLC);
+  
+  wassert (left->aop->size == result->aop->size);
+  
+  switch (left->aop->size)
+    {
+    case 1:
+      if (aopSame (result->aop, 0, left->aop, 0, 1) && left->aop->type == AOP_DIR)
+        {
+          emit3 (rlc ? A_SLL : A_SRL, left->aop, 0);
+          emit2 ("bccm", rlc ? "%s, #0" : "%s, #7", aopGet (left->aop, 0));
+          cost (4, 1);
+        }
+      else if (rlc && aopSame (result->aop, 0, left->aop, 0, 1) && aopOnStack (left->aop, 0, 1))
+        {
+          emit3 (A_SLL, left->aop, 0);
+          symbol *tlbl = (regalloc_dry_run ? 0 : newiTempLabel (0));
+          if (!regalloc_dry_run)
+              emit2 ("jrnc", "!tlabel", labelKey2num (tlbl->key));
+          emit2 ("inc", aopGet (left->aop, 0));
+          cost (2, 2);
+          emitLabel (tlbl);
+        }
+      else
+        {
+          if (!regDead (A_IDX, ic))
+            push (ASMOP_A, 0, 1);
+          cheapMove (ASMOP_A, 0, left->aop, 0, false);
+          if (rlc)
+            {
+              emit3 (A_SLL, ASMOP_A, 0);
+              emit3 (A_ADC, ASMOP_A, ASMOP_ZERO);
+            }
+          else if (!aopInReg (left->aop, 0, 1) && aopOnStack (left->aop, 0, 1)) // 4 bytes, 3 cycles.
+            {
+              emit3 (A_SRL, ASMOP_A, 0); // Get lowest bit into carry
+              cheapMove (ASMOP_A, 0, left->aop, 0, false);
+              emit3 (A_RRC, ASMOP_A, 0); // Rotate
+            }
+          else if (optimize.codeSpeed) // 5 bytes, 3 cycles
+            {
+              emit3 (A_SRL, ASMOP_A, 0);
+              symbol *tlbl = (regalloc_dry_run ? 0 : newiTempLabel (0));
+              if (!regalloc_dry_run)
+                emit2 ("jrnc", "!tlabel", labelKey2num (tlbl->key));
+              emit2 ("or", "#0x80");
+              cost (4, 2);
+              emitLabel (tlbl);
+            }
+          else // 4 bytes, 4 cycles.
+            {
+              push (ASMOP_A, 0, 1);
+              emit3 (A_SRL, ASMOP_A, 0); // Get lowest bit into carry
+              pop (ASMOP_A, 0, 1);
+              emit3 (A_RRC, ASMOP_A, 0); // Rotate
+            }
+          cheapMove (result->aop, 0, ASMOP_A, 0, false);
+          if (!regDead (A_IDX, ic))
+            pop (ASMOP_A, 0, 1);
+        }
+      break;
+    default:
+      wassertl (0, "Unsupported rotate size.");
+    }
+
+  freeAsmop (left);
+  freeAsmop (result);
+}
+ 
+/*------------------------------------------------------------------*/
 /* genSwap - swap nibbles or bytes                                  */
 /*------------------------------------------------------------------*/
 static void
@@ -9092,7 +9174,7 @@ genSTM8iCode (iCode *ic)
 
     case RRC:
     case RLC:
-      wassertl (0, "Unimplemented iCode");
+      genRotate (ic);
       break;
 
     case GETABIT:
